tests/ui/unsafe-binders/simple.stderr
warning: the feature `unsafe_binders` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/simple.rs:1:12
   |
LL | #![feature(unsafe_binders)]
   |            ^^^^^^^^^^^^^^
   |
   = note: see issue #130516 <https://github.com/rust-lang/rust/issues/130516> for more information
   = note: `#[warn(incomplete_features)]` on by default

error: unsafe binders are not yet implemented
  --> $DIR/simple.rs:5:12
   |
LL |     let x: unsafe<'a> &'a ();
   |            ^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error; 1 warning emitted

